--- a/itwoxtest-ui/package.json
+++ b/itwoxtest-ui/package.json
@@ -49,5 +49,10 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
   }
 }
