--- a/itwoxtest-ui/package.json
+++ b/itwoxtest-ui/package.json
@@ -48,6 +48,8 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "jest": "^29.7.0"
   },
   "jest": {
